# http-update-notify

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
src/: args.rs  check.rs  mails.rs  main.rs
