[package]
name = "http-update-notify"
version = "0.1.0"
authors = ["Marcin Mielniczuk <marmistrz.dev@zoho.eu>"]

[dependencies]
# current lettre doesn't support openssl 1.1.1
lettre = {git = "https://github.com/lettre/lettre"}
lettre_email = "0.8"
serde = "1"
serde_derive = "1"
toml = "0.4"
failure = "0.1"